// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-eCYdqJ gZLYzu"
>
  <header
    className="sc-jSMfEi cmiWaO"
  >
    <h3
      className="sc-gKXOVf huQihZ"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-papXJ ikUUXu"
  >
    <tbody>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-eCYdqJ gZLYzu"
>
  <header
    className="sc-jSMfEi cmiWaO"
  >
    <h3
      className="sc-gKXOVf huQihZ"
    >
      This is a title
    </h3>
    <h4
      className="sc-iBkjds elhcdn"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-papXJ ikUUXu"
  >
    <tbody>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-eCYdqJ gZLYzu"
>
  <header
    className="sc-jSMfEi cmiWaO"
  >
    <h3
      className="sc-gKXOVf huQihZ"
    >
      This is a title
    </h3>
    <h4
      className="sc-iBkjds elhcdn"
    >
      Subtitle
    </h4>
    <div
      className="sc-ftvSup euuSUL"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-papXJ ikUUXu"
  >
    <tbody>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-eCYdqJ gZLYzu"
>
  <header
    className="sc-jSMfEi cmiWaO"
  >
    <h3
      className="sc-gKXOVf huQihZ"
    >
      This is a title
    </h3>
    <div
      className="sc-ftvSup euuSUL"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-papXJ ikUUXu"
  >
    <tbody>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jqUVSM ceqSKG"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
